--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nocache": "^4.0.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "tesseract.js": "^6.0.1"
   }
 }
